# axkeystore

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh  plan.md
.agent/rules/: security.md  tech_stack.md
.agent/skills/crypto_handling/: SKILL.md
.agent/skills/expert_rust/: SKILL.md
.agent/skills/github_interaction/: SKILL.md
.agent/workflows/: implement_auth.md  initialize_project.md
.github/workflows/: rust.yml
src/: auth.rs  config.rs  crypto.rs  main.rs  storage.rs
src/tui/: app.rs  mod.rs  ui.rs
