[package]
name = "axkeystore"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
anyhow = "1.0.81"
directories = "5.0.1"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
argon2 = "0.5.3"
base64 = "0.22.0"
rpassword = "7.3"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"

