[package]
name = "axkeystore"
version = "0.1.9"
edition = "2021"

[dependencies]
clap = { version = "4.5.57", default-features = false, features = ["derive", "help", "usage", "std", "error-context", "suggestions"] }
tokio = { version = "1.49.0", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
anyhow = { version = "1.0.101", default-features = false, features = ["std"] }
directories = "5.0.1"
chacha20poly1305 = "0.10.1"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
argon2 = "0.5.3"
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
rpassword = "7.4.0"
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3.24.0"
wiremock = "0.6.5"

