[package]
name = "axkeystore"
version = "0.1.10"
edition = "2021"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.101"
directories = "5.0.1"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
argon2 = "0.5.3"
base64 = "0.22.1"
rpassword = "7.4.0"
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3.24.0"
wiremock = "0.6.5"

